src/objects/ER_Loop__c.object
<CustomObject>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT(Owner:User.ER_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_External_Reference__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The External Reference field is used to synchronize with PPS. Be carreful when defining it, it cannot be changed afterwards.</inlineHelpText>
        <label>External Reference</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ER_Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ToBeDefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Wallet__c</fullName>
        <label>Wallet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ToBeDefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loops</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VRER01_Loop_Ref_Cannot_Be_Changed</fullName>
        <active>true</active>
        <description>The Loop Reference (used to sync with PPS) cannot be changed otherwise it will create a new loop on PPS Side</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c),
ISCHANGED( ER_External_Reference__c ))</errorConditionFormula>
        <errorMessage>The Loop Reference field (used to sync with PPS) cannot be changed otherwise it will create a new loop on PPS Side</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER02_Loop_Ref_Caracters_Control</fullName>
        <active>true</active>
        <description>A specific format has to be used, for PPS “Must be Alphanumeric with no spaces. Underscores &apos;_&apos; and dashes &apos;-&apos; are allowed.”</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c),
NOT(REGEX( ER_External_Reference__c ,&quot;^[a-zA-Z0-9_-]*$&quot;)))</errorConditionFormula>
        <errorDisplayField>ER_External_Reference__c</errorDisplayField>
        <errorMessage>The External Reference field cannot contains special Caracters other than - (dash) and _ (underscore)</errorMessage>
    </validationRules>
</CustomObject>